# httpkit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  http_common.h  http_header.c  http_header.h  http_request.c  http_request.h  http_response.c  http_response.h  http_utils.c  http_utils.h  http_utils_extra.hpp  omake.lua  test.c
include/httpkit/: http_common.h  http_header.h  http_item.h  http_kv_list.h  http_kv_ol_list.h  http_request.h  http_request_decode.h  http_request_encode.h  http_response.h  http_response_decode.h  http_response_encode.h  http_retcode.h  http_utils.h
src/: def.h  http_header.c  http_header_decode.c  http_header_decode.h  http_header_encode.c  http_header_encode.h  http_kv_list.c  http_kv_ol_list.c  http_request.c  http_request_decode.c  http_request_encode.c  http_response.c  http_response_decode.c  http_response_encode.c  http_retcode.c  http_utils.c  kvpair.c  kvpair.h  misc.h
tests/: CMakeLists.txt  Makefile  omake.lua  test.c  test_header_decode.c  test_header_encode.c  test_main.c  test_req_decode.c  test_req_encode.c  test_res_decode.c  test_res_encode.c  test_url_decode.c  test_utils.h
